[gd_scene load_steps=5 format=3 uid="uid://nwy5vuwjgas0"]

[ext_resource type="Script" path="res://scenes/root_level.gd" id="1_2vcth"]
[ext_resource type="PackedScene" uid="uid://clhgopfoq7iyb" path="res://PlayerController.tscn" id="1_lfa0c"]
[ext_resource type="Script" path="res://scenes/fpsLabel.gd" id="2_j4yvl"]
[ext_resource type="PackedScene" uid="uid://d3kydmjnjc5pl" path="res://Food.tscn" id="3_nr674"]

[node name="RootLevel" type="Node2D"]
script = ExtResource("1_2vcth")

[node name="PlayerController" parent="." instance=ExtResource("1_lfa0c")]
position = Vector2(617, 336)

[node name="Label" type="Label" parent="."]
offset_left = 59.0
offset_top = 36.0
offset_right = 99.0
offset_bottom = 59.0
scale = Vector2(3.5606, 3.25453)
script = ExtResource("2_j4yvl")

[node name="Food" parent="." instance=ExtResource("3_nr674")]
position = Vector2(120, 515)
scale = Vector2(0.40244, 0.44681)

[node name="Food2" parent="." instance=ExtResource("3_nr674")]
position = Vector2(328, 560)
scale = Vector2(0.40244, 0.44681)

[node name="Food3" parent="." instance=ExtResource("3_nr674")]
position = Vector2(322, 94)
scale = Vector2(0.40244, 0.44681)

[node name="Food4" parent="." instance=ExtResource("3_nr674")]
position = Vector2(70, 429)
scale = Vector2(0.40244, 0.44681)

[node name="FoodTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FoodTimer" to="." method="_on_food_timer_timeout"]
